# transport-async-rs

./: Cargo.toml  Makefile.toml
.github/workflows/: test.yml
examples/: client.rs  codec_client.rs  codec_server.rs  ipc_client.rs  ipc_codec_client.rs  ipc_codec_server.rs  ipc_server.rs  local.rs  server.rs  stdio_client.rs  stdio_server.rs  stdio_test.rs
examples/certs/: cert.der  cert.key
src/: lib.rs
src/codec/: builder.rs  mod.rs  serde.rs  serializer.rs  stream.rs
src/transport/: codec.rs  ipc.rs  local.rs  mod.rs  quic.rs  stdio.rs  tcp.rs  udp.rs
tests/: bytes_test.rs  codec_test.rs
