[package]
name = "transport-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tipsy = { version = "0.3", optional = true }
tokio = { version = "1" }
tokio-stream = { version = "0.1", features = ["net"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tokio-serde = { version = "0.9", optional = true }
bytes = { version = "1", optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
pin-project-lite = "0.2"
quinn = { version = "0.11", optional = true }
async-stream = { version = "0.3", optional = true }

[features]
codec = ["serde", "tokio-serde", "bytes", "tokio-util"]
bincode = ["codec", "tokio-serde/bincode"]
cbor = ["codec", "tokio-serde/cbor"]
json = ["codec", "tokio-serde/json"]
messagepack = ["codec", "tokio-serde/messagepack"]
ipc = ["tipsy"]
local = ["tokio/sync"]
stdio = ["tokio/io-std", "tokio/process", "tokio-stream"]
tcp = ["tokio/net", "tokio-stream"]
udp = ["tokio/net", "tokio-stream"]
all-transports = ["ipc", "local", "stdio", "tcp", "udp", "quic"]
all-codecs = ["cbor", "json", "messagepack", "bincode"]
all = ["all-transports", "codec"]
quic = ["dep:quinn", "dep:async-stream"]

[dev-dependencies]
clap = { version = "4.5.27", features = ["derive"] }
tokio = { version = "1.43.0", features = [
  "net",
  "sync",
  "io-std",
  "process",
  "macros",
  "rt-multi-thread",
  "io-util",
] }

[[example]]
name = "client"
required-features = ["all-transports"]

[[example]]
name = "server"
required-features = ["all-transports"]

[[example]]
name = "codec_client"
required-features = ["all-transports", "all-codecs"]

[[example]]
name = "codec_server"
required-features = ["all-transports", "all-codecs"]

[[example]]
name = "local"
required-features = ["local"]

[[example]]
name = "stdio_client"
required-features = ["stdio", "all-codecs"]

[[example]]
name = "stdio_server"
required-features = ["stdio", "all-codecs"]
